--- a/goodjob/build.gradle
+++ b/goodjob/build.gradle
@@ -46,6 +46,11 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
+    // open ai
+    implementation 'com.theokanning.openai-gpt3-java:api:0.11.1'
+    //implementation 'com.theokanning.openai-gpt3-java:client:0.11.1'
+    implementation 'com.theokanning.openai-gpt3-java:service:0.11.1'
+
     //test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
