--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,16 +1,20 @@
 spring:
   datasource:
-    url: {DB_URL}
-    username: {DB_USERNAME}
-    password: {DB_PASSWORD}
-    driver-class-name: com.mysql.jdbc.Driver
+    url: { DB_URL }
+    username: { DB_USERNAME }
+    password: { DB_PASSWORD }
+    driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL8Dialect
+
 
 logging:
   level:
     com.com.goodjob: debug #
 
 openai:
-  token: {OPENAI_API_KEY}
+  token: { OPENAI_API_KEY }
