--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/goodjob
-    username: ENC(V2xu30BaZ4DCNxCxywbxtg==)
-    password: ENC(YUgZosy6QAqosywMXGIpqg==)
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mariadb://127.0.0.1:3306/goodjob?useUnicode=true&characterEncoding=utf8&autoReconnect=true&serverTimezone=Asia/Seoul
+    username: ENC(7JY14CMZTTa1RORczVt2Hw==)
+    password: ENC(dSo9G4/D9uroek5yMfBnKw/+w16gkSpf)
+    driver-class-name: org.mariadb.jdbc.Driver
   jpa:
     hibernate:
       ddl-auto: update
