--- a/build.gradle
+++ b/build.gradle
@@ -62,8 +62,9 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
 
-
-
+    // Spring Batch
+    implementation("org.springframework.boot:spring-boot-starter-batch")
+    implementation group: 'com.sun.xml.bind', name: 'jaxb-impl', version: '4.0.2'
 }
 
 jar {
