--- a/build.gradle
+++ b/build.gradle
@@ -49,7 +49,6 @@ dependencies {
     //jasypt
     implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.5'
 
-
     //lombok
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
@@ -74,6 +73,11 @@ dependencies {
 
     // 타임리프 layout
     implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
+
+    // jwt
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 }
 
 jar {
