Design: layout 샘플 생성

--- a/build.gradle
+++ b/build.gradle
@@ -71,6 +71,9 @@ dependencies {
     //mapstruct
     implementation 'org.mapstruct:mapstruct:1.4.2.Final'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
+
+    //레이아웃
+    implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
 }
 
 jar {
