Fix: gradlew 빌드 실패하던 이슈 해결

--- a/build.gradle
+++ b/build.gradle
@@ -76,9 +76,10 @@ dependencies {
     implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
 }
 
-jar {
-    enabled = false
+bootJar {
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 }
+
 
 tasks.named('test') {
     useJUnitPlatform()
