Feat: 런타임시 생기는 폴더 경로 무시하도록 추가

--- a/.gitignore
+++ b/.gitignore
@@ -343,4 +343,7 @@ gradle-app.setting
 
 /src/main/resources/application-local.yml
 
+### main 폴더 내의 /generated 폴더 추가
+/src/main/generated/**
+
 # End of https://www.toptal.com/developers/gitignore/api/windows,macos,java,gradle,intellij,intellij+all,intellij+iml
