--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,6 +18,12 @@ spring:
   messages:
     basename: message/messages
     encoding: UTF-8
+
+  data:
+    redis:
+      host: localhost
+      port: 6379
+
 jasypt:
   encryptor:
     password: ${JASYPT_PASSWORD}
