Feat: OAuth2 인증 설정

--- a/build.gradle
+++ b/build.gradle
@@ -95,6 +95,9 @@ dependencies {
     annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
     annotationProcessor "jakarta.annotation:jakarta.annotation-api"
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+
+    // oauth
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 }
 
 bootJar {
