--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -20,5 +20,8 @@ scheduler:
     job: "0 0 4/12 * * *"
 
 custom:
+  github:
+    client-id: ENC(KP2uJoq4/fKHp20/Ko41G8roZAGa30C75XkuWdpKeKI=)
+    client-secret: ENC(n52W++3MJQHP25CWfyQ0gk/id7irOQwXVWCR4Ld7W7Bb8C2tYl0=)
   site:
     baseUrl: https://waveofmymind.shop
