--- a/build.gradle
+++ b/build.gradle
@@ -98,6 +98,9 @@ dependencies {
 
     // oauth
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+
+    // AWS S3
+    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 }
 
 bootJar {
