Feat: 깃허브 로그인 기능 추가

--- a/build.gradle
+++ b/build.gradle
@@ -47,8 +47,8 @@ dependencies {
     //redis
     implementation 'org.springframework.boot:spring-boot-starter-cache'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
-    implementation 'org.springframework.session:spring-session-core'
-    implementation 'org.springframework.session:spring-session-data-redis'
+//    implementation 'org.springframework.session:spring-session-core'
+//    implementation 'org.springframework.session:spring-session-data-redis'
 
     //jasypt
     implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.5'
