--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,6 +20,7 @@ spring:
     properties:
       hibernate:
         format_sql: true
+        default_batch_fetch_size: 500
 
   messages:
     basename: message/messages
