Fix: 배치 스케줄 타임 변경

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -78,7 +78,7 @@ management:
   endpoints:
     web:
       exposure:
-        include: "*"
+        include: "prometheus,health,info,metrics"
   metrics:
     tags:
       application: ${spring.application.name}
