Feat: 이메일 인증기능추가

--- a/build.gradle
+++ b/build.gradle
@@ -101,6 +101,9 @@ dependencies {
 
     // AWS S3
     implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+
+    // Mail
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
 }
 
 bootJar {
