--- a/build.gradle
+++ b/build.gradle
@@ -99,6 +99,9 @@ dependencies {
     // oauth
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 
+    // AWS CloudWatch
+    implementation'ca.pjer:logback-awslogs-appender:1.6.0'
+
     // AWS S3
     implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 
