Feat: gitignore 드라이버 추가

--- a/.gitignore
+++ b/.gitignore
@@ -345,5 +345,5 @@ gradle-app.setting
 
 ### main 폴더 내의 /generated 폴더 추가
 /src/main/generated/**
-
+/drivers/**
 # End of https://www.toptal.com/developers/gitignore/api/windows,macos,java,gradle,intellij,intellij+all,intellij+iml
