--- a/batch/build.gradle
+++ b/batch/build.gradle
@@ -7,7 +7,13 @@ dependencies {
     implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.141.59'
 }
 
+bootJar {
+    enabled = false
+}
 
+jar {
+    enabled = true
+}
 
 
 
