Feat: 셀레니움 버전 업 및 api 모듈 의존성 제거

--- a/api/build.gradle
+++ b/api/build.gradle
@@ -1,8 +1,5 @@
 dependencies {
 
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    developmentOnly 'org.springframework.boot:spring-boot-devtools'
-
     implementation project(':core')
     implementation project(':batch')
 
@@ -14,6 +11,7 @@ dependencies {
 
 bootJar {
     enabled = true
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 }
 
 jar {
