Feat: gpt모듈 의존성 추가

--- a/api/build.gradle
+++ b/api/build.gradle
@@ -2,6 +2,7 @@ dependencies {
 
     implementation project(':core')
     implementation project(':batch')
+    implementation project(':gpt')
 
 }
 
