--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,9 @@ subprojects {
     apply plugin: 'org.springframework.boot'
     apply plugin: 'io.spring.dependency-management'
 
+        implementation 'org.springframework.kafka:spring-kafka'
+        testImplementation 'org.springframework.kafka:spring-kafka-test'
+
 
     group = 'com.goodjob'
     version = '0.0.1-SNAPSHOT'
