--- a/core/build.gradle
+++ b/core/build.gradle
@@ -10,6 +10,9 @@ dependencies {
     implementation 'com.theokanning.openai-gpt3-java:service:0.12.0'
 
 
+    implementation 'org.springframework.kafka:spring-kafka'
+    testImplementation 'org.springframework.kafka:spring-kafka-test'
+
     //mapstruct
     implementation 'org.mapstruct:mapstruct:1.4.2.Final'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
