Refactor: JPA 의존성 batch에서 사용 안하도록 변경

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -3,6 +3,8 @@ dependencies {
 
     //jasypt
     implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.5'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
     //redis
     implementation 'org.springframework.boot:spring-boot-starter-cache'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
