--- a/api/build.gradle
+++ b/api/build.gradle
@@ -1,7 +1,8 @@
 dependencies {
 
     implementation project(':core')
-    implementation project(':batch')
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
 
 }
 
