--- a/api/build.gradle
+++ b/api/build.gradle
@@ -1,6 +1,7 @@
 dependencies {
 
     implementation project(':core')
+    implementation project(':batch')
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
 
