--- a/api/build.gradle
+++ b/api/build.gradle
@@ -3,6 +3,7 @@ dependencies {
     implementation project(':core')
     implementation project(':batch')
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation project(path: ':batch')
 
 
 }
