--- a/api/build.gradle
+++ b/api/build.gradle
@@ -2,7 +2,7 @@ dependencies {
 
     implementation project(':core')
     implementation project(':batch')
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation project(':resume-domain')
     implementation project(path: ':batch')
 
 
