--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,6 +1,7 @@
 
 dependencies {
 
+    implementation project(':resume-domain')
     //jasypt
     implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.5'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -29,8 +30,6 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
 
-    // Spring Batch
-    testImplementation 'org.springframework.batch:spring-batch-test'
 
 }
 
