--- a/batch/build.gradle
+++ b/batch/build.gradle
@@ -5,6 +5,7 @@ dependencies {
     implementation project(':core')
     // selenium
     implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.8.3'
+    implementation project(path: ':resume-domain')
 }
 
 bootJar {
