--- a/batch/build.gradle
+++ b/batch/build.gradle
@@ -1,11 +1,34 @@
+plugins {
+    id 'java'
+    id 'org.springframework.boot' version '3.1.0'
+    id 'io.spring.dependency-management' version '1.1.0'
+}
+
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
+}
+
+repositories {
+    mavenCentral()
+}
+version = '0.0.1-SNAPSHOT'
+sourceCompatibility = '17'
 dependencies {
 
     // Spring Batch
     implementation("org.springframework.boot:spring-boot-starter-batch")
-    implementation project(':core')
+    testImplementation("org.springframework.batch:spring-batch-test")
+
     // selenium
     implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.8.3'
-    implementation project(path: ':resume-domain')
+
+    //kafka
+    implementation 'org.springframework.kafka:spring-kafka'
+    testImplementation 'org.springframework.kafka:spring-kafka-test'
+    //jasypt
+    implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.5'
 }
 
 bootJar {
@@ -18,3 +41,13 @@ jar {
 
 
 
+clean {
+    delete file('src/main/generated')
+}
+compileJava {
+    options.compilerArgs << '-Aquerydsl.generatedAnnotationClass=javax.annotation.Generated'
+}
+
+tasks.named('test') {
+    useJUnitPlatform()
+}
