--- a/api/build.gradle
+++ b/api/build.gradle
@@ -1,9 +1,9 @@
 dependencies {
 
     implementation project(':core')
-    implementation project(':batch')
+//    implementation project(':batch')
     implementation project(':resume-domain')
-    implementation project(path: ':batch')
+//    implementation project(path: ':batch')
 
 
 }
