--- a/core/build.gradle
+++ b/core/build.gradle
@@ -14,10 +14,11 @@ dependencies {
 
     //mapstruct
     implementation 'org.mapstruct:mapstruct:1.4.2.Final'
-    testImplementation project(path: ':batch')
+//    testImplementation project(path: ':batch')
     testImplementation project(path: ':api')
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
 
+    implementation 'com.h2database:h2'
 
     // AWS S3
     implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
