--- a/cloudbuild-ci.yaml
+++ b/cloudbuild-ci.yaml
@@ -4,7 +4,7 @@
   args:
     - 'build'
     - '-t'
-    - 'us-central1-docker.pkg.dev/$PROJECT_ID/my-repository/goodjob-prod:$SHORT_SHA'
+    - 'us-central1-docker.pkg.dev$PROJECT_ID/my-repository/goodjob-prod:$SHORT_SHA'
     - '.'
 
 # This step pushes the image to Artifact Registry
@@ -14,4 +14,19 @@
   id: Push
   args:
     - 'push'
-    - 'us-central1-docker.pkg.dev/$PROJECT_ID/my-repository/goodjob-prod:$SHORT_SHA'
+    - 'us-central1-docker.pkg.dev$PROJECT_ID/my-repository/goodjob-prod:$SHORT_SHA'
+
+# This step pushes the manifest back to hello-cloudbuild-env
+- name: 'gcr.io/cloud-builders/gcloud'
+  id: Push manifest
+  entrypoint: /bin/sh
+  args:
+    - '-c'
+    - |
+      set -x && \
+      cd hello-cloudbuild-env && \
+      git add kubernetes.yaml && \
+      git commit -m "Deploying image us-central1-docker.pkg.dev$PROJECT_ID/my-repository/goodjob-prod:${SHORT_SHA}
+      Built from commit ${COMMIT_SHA} of repository hello-cloudbuild-app
+      Author: $(git log --format='%an <%ae>' -n 1 HEAD)" && \
+      git push origin candidate
