--- a/cloudbuild-ci.yaml
+++ b/cloudbuild-ci.yaml
@@ -5,7 +5,7 @@ steps:
   args:
   - 'build'
   - '-t'
-  - 'us-central1-docker.pkg.dev$PROJECT_ID/my-repository/goodjob-prod:$SHORT_SHA'
+  - 'us-central1-docker.pkg.dev/$PROJECT_ID/my-repository/goodjob-prod:$SHORT_SHA'
   - '.'
 
   # This step pushes the image to Artifact Registry
@@ -15,7 +15,7 @@ steps:
   id: Push
   args:
   - 'push'
-  - 'us-central1-docker.pkg.dev$PROJECT_ID/my-repository/goodjob-prod:$SHORT_SHA'
+  - 'us-central1-docker.pkg.dev/$PROJECT_ID/my-repository/goodjob-prod:$SHORT_SHA'
 
 - name: 'gcr.io/cloud-builders/gcloud'
   id: Clone env repository
@@ -47,7 +47,7 @@ steps:
     set -x && \
     cd hello-cloudbuild-env && \
     git add kubernetes.yaml && \
-    git commit -m "Deploying image us-central1-docker.pkg.dev$PROJECT_ID/my-repository/goodjob-prod:${SHORT_SHA}
+    git commit -m "Deploying image us-central1-docker.pkg.dev/$PROJECT_ID/my-repository/goodjob-prod:${SHORT_SHA}
     Built from commit ${COMMIT_SHA} of repository hello-cloudbuild-app
     Author: $(git log --format='%an <%ae>' -n 1 HEAD)" && \
     git push origin candidate
