--- a/cloudbuild-ci.yaml
+++ b/cloudbuild-ci.yaml
@@ -23,8 +23,8 @@ steps:
   args:
   - '-c'
   - |
-    gcloud source repos clone hello-cloudbuild-env && \
-    cd hello-cloudbuild-env && \
+    gcloud source repos clone github_waveofmymind_cloud-build && \
+    cd github_waveofmymind_cloud-build && \
     git checkout candidate && \
     git config user.email $(gcloud auth list --filter=status:ACTIVE --format='value(account)')
 
@@ -36,7 +36,7 @@ steps:
   - '-c'
   - |
     sed "s/GOOGLE_CLOUD_PROJECT/${PROJECT_ID}/g" kubernetes.yaml.tpl | \
-    sed "s/COMMIT_SHA/${SHORT_SHA}/g" > hello-cloudbuild-env/kubernetes.yaml
+    sed "s/COMMIT_SHA/${SHORT_SHA}/g" > github_waveofmymind_cloud-build/kubernetes.yaml
 
 - name: 'gcr.io/cloud-builders/gcloud'
   id: Push manifest
@@ -45,7 +45,7 @@ steps:
   - '-c'
   - |
     set -x && \
-    cd hello-cloudbuild-env && \
+    cd github_waveofmymind_cloud-build && \
     git add kubernetes.yaml && \
     git commit -m "Deploying image us-central1-docker.pkg.dev/$PROJECT_ID/my-repository/goodjob-prod:${SHORT_SHA}
     Built from commit ${COMMIT_SHA} of repository hello-cloudbuild-app
