--- a/cloudbuild-ci.yaml
+++ b/cloudbuild-ci.yaml
@@ -23,20 +23,20 @@ steps:
   args:
   - '-c'
   - |
-    gcloud source repos clone github_waveofmymind_cloud-build && \
-    cd github_waveofmymind_cloud-build && \
+    gcloud source repos clone hello-cloudbuild-env && \
+    cd hello-cloudbuild-env && \
     git checkout candidate && \
     git config user.email $(gcloud auth list --filter=status:ACTIVE --format='value(account)')
 
-  # This step generates the new manifest
+ # This step generates the new manifest
 - name: 'gcr.io/cloud-builders/gcloud'
   id: Generate manifest
   entrypoint: /bin/sh
   args:
   - '-c'
   - |
-    sed "s/GOOGLE_CLOUD_PROJECT/${PROJECT_ID}/g" kubernetes.yaml.tpl | \
-    sed "s/COMMIT_SHA/${SHORT_SHA}/g" > github_waveofmymind_cloud-build/kubernetes.yaml
+    IMAGE_NAME="us-central1-docker.pkg.dev/$PROJECT_ID/my-repository/goodjob-prod:$SHORT_SHA" && \
+    sed "s,IMAGE_NAME_PLACEHOLDER,${IMAGE_NAME},g" kubernetes.yaml.tpl > hello-cloudbuild-env/kubernetes.yaml
 
 - name: 'gcr.io/cloud-builders/gcloud'
   id: Push manifest
@@ -45,7 +45,7 @@ steps:
   - '-c'
   - |
     set -x && \
-    cd github_waveofmymind_cloud-build && \
+    cd hello-cloudbuild-env && \
     git add kubernetes.yaml && \
     git commit -m "Deploying image us-central1-docker.pkg.dev/$PROJECT_ID/my-repository/goodjob-prod:${SHORT_SHA}
     Built from commit ${COMMIT_SHA} of repository hello-cloudbuild-app
