Test: MemberController 테스트코드

--- a/build.gradle
+++ b/build.gradle
@@ -69,6 +69,7 @@ subprojects {
         implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
         implementation 'org.springframework.boot:spring-boot-starter-security'
         implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
+        testImplementation 'org.springframework.security:spring-security-test'
 
         compileOnly 'org.projectlombok:lombok'
         annotationProcessor 'org.projectlombok:lombok'
