--- a/.gitignore
+++ b/.gitignore
@@ -350,6 +350,8 @@ gradle-app.setting
 /core/build/**
 /api/build/**
 /resume-domain/build/**
+/job-domain/build/**
+/common/build/**
 
 /drivers/**
 # End of https://www.toptal.com/developers/gitignore/api/windows,macos,java,gradle,intellij,intellij+all,intellij+iml
