Refactor: 멤버 모듈 추가로 의존성 변경

--- a/api/build.gradle
+++ b/api/build.gradle
@@ -4,6 +4,7 @@ dependencies {
     implementation project(':resume-domain')
     implementation project(':common')
     implementation project(':job-domain')
+    implementation project(':member-domain')
 }
 
 bootJar {
