--- a/core/build.gradle
+++ b/core/build.gradle
@@ -3,6 +3,7 @@ dependencies {
 
     implementation project(':resume-domain')
     implementation project(':common')
+    implementation project(':member-domain')
 
     implementation 'com.theokanning.openai-gpt3-java:api:0.12.0'
     implementation 'com.theokanning.openai-gpt3-java:service:0.12.0'
