--- a/api/build.gradle
+++ b/api/build.gradle
@@ -5,6 +5,7 @@ dependencies {
     implementation project(':common')
     implementation project(':job-domain')
     implementation project(':member-domain')
+    implementation project(':mentoring-domain')
 }
 
 bootJar {
