Refactor: 게시글 모듈 추가

--- a/api/build.gradle
+++ b/api/build.gradle
@@ -6,6 +6,7 @@ dependencies {
     implementation project(':job-domain')
     implementation project(':member-domain')
     implementation project(':mentoring-domain')
+    implementation project(':article-domain')
 }
 
 bootJar {
