--- a/core/build.gradle
+++ b/core/build.gradle
@@ -4,18 +4,8 @@ dependencies {
     implementation project(':resume-domain')
     implementation project(':common')
     implementation project(':member-domain')
+    implementation project(':article-domain')
 
-    implementation 'com.theokanning.openai-gpt3-java:api:0.12.0'
-    implementation 'com.theokanning.openai-gpt3-java:service:0.12.0'
-
-    //mapstruct
-    implementation 'org.mapstruct:mapstruct:1.4.2.Final'
-    annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
-
-    implementation 'com.h2database:h2'
-
-    // AWS S3
-    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 
 }
 
