--- a/api/build.gradle
+++ b/api/build.gradle
@@ -7,7 +7,21 @@ dependencies {
     implementation project(':member-domain')
     implementation project(':mentoring-domain')
     implementation project(':article-domain')
+    // open feign
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+
 }
+
+ext {
+    set('springCloudVersion', "2022.0.3")
+}
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+    }
+}
+
 
 bootJar {
     enabled = true
