feat: exactly once를 보장할 수 있도록 카프카 프로듀서와 토픽을 커스텀한다.

--- a/api/src/main/resources/application-gpt.yml
+++ b/api/src/main/resources/application-gpt.yml
@@ -8,3 +8,8 @@ spring:
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
+      acks: all
+      retries: 1
+      enable-idempotence: true
+      max-in-flight-requests-per-connection: 2
+
